March 18, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/plugins/HIDInput/src/PlugPAD.c: Commented out calls to
   HIDCalibrateValue(), which caused problem in some cases.

March 17, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/plugins/HIDInput/HIDInput.xcodeproj/project.pbxproj: Fixed build
   issue.

March 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * po/it.po: Updated Italian translation by Giovanni Scafora.

March 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/mdec.c: 0x1f should be 31 rather than 15 (stupid /me).
 * po/it.po: Added Italian translation (Thanks Giovanni Scafora).
 * AUTHORS, po/LINGUAS, po/update-pot.sh: Updated.

March 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/mdec.c: Rewritten MDEC decoder to replace non-free code, also
   fixes image quality issues and improves decoding speed. (Thanks gorlik)
 * AUTHORS: Updated info.

March 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/LnxMain.c: Fixed -cdfile switch (Thanks NeToU).
 * AUTHORS: Updated info.

March 6, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/ppf.c: Speeded up the PPF loading routine when the PPF file
   is "in order".

February 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfinput/analog.c: Confirmed center value should be 127 instead of
   128, removed obsolete comments.
   (http://code.google.com/p/pcsx2/source/detail?r=2587)

February 18, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * AUTHORS: Updated info.

February 17, 2010 Tristin Celestin <cetris1@umbc.edu>

 * configure.ac: Removed PulseAudio Simple API support.
 * plugins/dfsound/Makefile.am: Likewise.
 * plugins/dfsound/nullsnd.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/pulseaudiosimple.c: Removed.
 * plugins/dfsound/pulseaudio.c: Fixed high-compatibility (SPUasync) mode.

February 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
